--- a/learning_journal/templates/add.jinja2
+++ b/learning_journal/templates/add.jinja2
@@ -1,14 +1,16 @@
 {% extends "base.jinja2" %}
 {% block content %}
 
-<form method="POST">
-    <fieldset>
-        {{ form.title.label }}
-        {{ form.title }}
-        {{ form.text.label }}
-        {{ form.text}}
-        <input type="submit" value="submit">
-    </fieldset>
-</form>
+<section id="add-entry">
+    <form method="POST">
+        <fieldset>
+            {{ form.title.label }}
+            {{ form.title }}
+            {{ form.text.label }}
+            {{ form.text}}
+            <input type="submit" value="submit">
+        </fieldset>
+    </form>
+</section>
 	
 {% endblock %}
