--- a/learning_journal/templates/list.jinja2
+++ b/learning_journal/templates/list.jinja2
@@ -1,17 +1,19 @@
 {% extends "base.jinja2" %}
 {% block content %}
-<ul>
-	{% if entries %}
-    {% for entry in entries%}
-    <li>
-       <a href='/entry/{{ entry.id }}'>
-        <h3>{{ entry.title }}:</h3>
-        <p>{{ entry.created }}</p>
-       </a>
-    </li>
-    {% endfor %}
-    {% else %}
-    <p>No entries here so far</p>
-    {% endif %}
-</ul>
+<section id="list-articles">
+    <ul>
+    	{% if entries %}
+        {% for entry in entries%}
+        <li>
+           <a href= {{ request.route_url("entry", entry=entry.id) }}>
+            <h3 class="entry-title">{{ entry.title }}:</h3>
+            <p class="created">{{ entry.created }}</p>
+           </a>
+        </li>
+        {% endfor %}
+        {% else %}
+        <p>No entries here so far</p>
+        {% endif %}
+    </ul>
+</section>
 {% endblock %}
