--- a/learning_journal/templates/entry.jinja2
+++ b/learning_journal/templates/entry.jinja2
@@ -6,8 +6,11 @@
     <h4>{{ entry.time }}</h4>
     <p>{{ entry.text }}</p>
     <h5><a href={{ request.route_url('edit_entry', entry=entry.id) }} id="edit-link">Edit This Post</a></h5>
-</section>
+    {% if logged_in %}
+    <a href="{{ request.application_url }}/logout">Logout</a>
+    {% endif %}
 
+</section>
 {%endblock content%}
 
 
