--- a/learning_journal/templates/entry.jinja2
+++ b/learning_journal/templates/entry.jinja2
@@ -4,11 +4,13 @@
 <section id="entry-view">
     <h2>{{ entry.title }}</h2>
     <h4>{{ entry.time }}</h4>
-    <p>{{ entry.text }}</p>
+
+    {% if request.has_permission('edit') %}
     <h5><a href={{ request.route_url('edit_entry', entry=entry.id) }} id="edit-link">Edit This Post</a></h5>
-    {% if logged_in %}
-    <a href="{{ request.application_url }}/logout">Logout</a>
     {% endif %}
+    
+    <p>{{ entry.text }}</p>
+
 
 </section>
 {%endblock content%}
