--- a/learning_journal/templates/base.jinja2
+++ b/learning_journal/templates/base.jinja2
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>vimpy technical blog</title>
     <link rel="stylesheet" href="/../static/pstyle.css" type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body>
     <div class="container">
