--- a/learning_journal/templates/edit.jinja2
+++ b/learning_journal/templates/edit.jinja2
@@ -8,7 +8,7 @@
             {{ form.title }}
             {{ form.text.label }}
             {{ form.text }}
-            <input type="submit" value="submit">
+            <input type="submit" value="submit" onclick="ajax_call()">
         </fieldset>
     </form>
 </section>
