--- a/learning_journal/templates/entry.jinja2
+++ b/learning_journal/templates/entry.jinja2
@@ -9,7 +9,7 @@
     <h5><a href={{ request.route_url('edit_entry', entry=entry.id) }} id="edit-link">Edit This Post</a></h5>
     {% endif %}
     
-    <p>{{ entry.text }}</p>
+    <p>{{ entry.markdown_text | safe }}</p>
     <a href="https://twitter.com/share" class="twitter-share-button" data-text="{{ entry.title }}" data-via="SelenaFlannery" data-size="small" data-hashtags="python">Tweet</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     
